--- a/charts/argo-cd/templates/argocd-server/gke/managedcertificate.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/managedcertificate.yaml
@@ -1,11 +1,12 @@
-{{- if .Values.server.gke.managedCertificate.enabled }}
+{{- if .Values.server.ingress.gke.enabled }}
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
   name: {{ include "argo-cd.server.fullname" . }}
-{{- with .Values.server.gke.managedCertificate.domains }}
 spec:
   domains:
-    {{- toYaml . | nindent 4 }}
-{{- end }}
+    - {{ default .Values.global.domain .Values.server.ingress.hostname }}
+    {{- with .Values.server.ingress.gke.domains }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
